# hackupc18

./: .gitignore  .gitmodules  README.md
JobCam/: build.gradle
JobCam/app/: build.gradle
JobCam/app/src/androidTest/java/com/hackupc/uoe/jobcam/: ExampleInstrumentedTest.kt
JobCam/app/src/androidTest/java/com/upc/hack/myapplication/: ExampleInstrumentedTest.java
JobCam/app/src/main/: AndroidManifest.xml
JobCam/app/src/main/java/com/hackupc/uoe/infojobsapi/: InfoJobs.kt
JobCam/app/src/main/java/com/hackupc/uoe/jobcam/: CameraActivity.kt  MainActivity.kt  ResultsActivity.kt
JobCam/app/src/main/java/com/hackupc/uoe/jobcam/Components/: Boundary.kt  ScreenTouchDetector.java  ViewerState.kt
JobCam/app/src/main/res/layout/: activity_main.xml  home_screen.xml  result_layout.xml
JobCam/app/src/main/res/raw/: andy.sfb
JobCam/app/src/main/res/values/: secrets.xml  strings.xml
JobCam/app/src/test/java/com/hackupc/uoe/jobcam/: ExampleUnitTest.kt
JobCam/app/src/test/java/com/upc/hack/myapplication/: ExampleUnitTest.java
ObjDetectServer/: .gitignore  CMakeLists.txt  mkdarknet.sh
ObjDetectServer/include/: objdetserver.h
ObjDetectServer/src/: main.cpp
